--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-cli-ghpages": "^1.0.7",
     "angular2-uuid": "^1.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
